--- a/mydocumentation/files/src-controller-followingcontroller.html
+++ b/mydocumentation/files/src-controller-followingcontroller.html
@@ -111,7 +111,7 @@
 <dl class="phpdocumentor-table-of-contents">
     
             <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/App-Controller-FollowingController.html"><abbr title="\App\Controller\FollowingController">FollowingController</abbr></a></dt>
-        <dd></dd>
+        <dd>Class FollowingController</dd>
     
     </dl>
 
