--- a/mydocumentation/files/src-controller-myoauthaccesstokencontroller.html
+++ b/mydocumentation/files/src-controller-myoauthaccesstokencontroller.html
@@ -111,7 +111,7 @@
 <dl class="phpdocumentor-table-of-contents">
     
             <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/App-Controller-MyOAuthAccessTokenController.html"><abbr title="\App\Controller\MyOAuthAccessTokenController">MyOAuthAccessTokenController</abbr></a></dt>
-        <dd></dd>
+        <dd>Class MyOAuthAccessTokenController</dd>
     
     </dl>
 
