--- a/mydocumentation/files/src-controller-restcontroller.html
+++ b/mydocumentation/files/src-controller-restcontroller.html
@@ -111,7 +111,7 @@
 <dl class="phpdocumentor-table-of-contents">
     
             <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/App-Controller-RestController.html"><abbr title="\App\Controller\RestController">RestController</abbr></a></dt>
-        <dd></dd>
+        <dd>Class RestController</dd>
     
     </dl>
 
