--- a/mydocumentation/files/src-repository-followingrepository.html
+++ b/mydocumentation/files/src-repository-followingrepository.html
@@ -111,7 +111,7 @@
 <dl class="phpdocumentor-table-of-contents">
     
             <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/App-Repository-FollowingRepository.html"><abbr title="\App\Repository\FollowingRepository">FollowingRepository</abbr></a></dt>
-        <dd></dd>
+        <dd>Repository for Following entity.</dd>
     
     </dl>
 
