--- a/mydocumentation/files/src-repository-myoauthaccesstokenrepository.html
+++ b/mydocumentation/files/src-repository-myoauthaccesstokenrepository.html
@@ -111,7 +111,7 @@
 <dl class="phpdocumentor-table-of-contents">
     
             <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/App-Repository-MyOAuthAccessTokenRepository.html"><abbr title="\App\Repository\MyOAuthAccessTokenRepository">MyOAuthAccessTokenRepository</abbr></a></dt>
-        <dd></dd>
+        <dd>Repository for OAuth Access Token Repository.</dd>
     
     </dl>
 
