--- a/mydocumentation/files/src-repository-postrepository.html
+++ b/mydocumentation/files/src-repository-postrepository.html
@@ -111,7 +111,7 @@
 <dl class="phpdocumentor-table-of-contents">
     
             <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/App-Repository-PostRepository.html"><abbr title="\App\Repository\PostRepository">PostRepository</abbr></a></dt>
-        <dd></dd>
+        <dd>Repository for Post Repository</dd>
     
     </dl>
 
