--- a/mydocumentation/namespaces/app-repository.html
+++ b/mydocumentation/namespaces/app-repository.html
@@ -106,15 +106,15 @@
 <dl class="phpdocumentor-table-of-contents">
     
             <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/App-Repository-FollowingRepository.html"><abbr title="\App\Repository\FollowingRepository">FollowingRepository</abbr></a></dt>
-        <dd></dd>
+        <dd>Repository for Following entity.</dd>
             <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/App-Repository-MyOAuthAccessTokenRepository.html"><abbr title="\App\Repository\MyOAuthAccessTokenRepository">MyOAuthAccessTokenRepository</abbr></a></dt>
-        <dd></dd>
+        <dd>Repository for OAuth Access Token Repository.</dd>
             <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/App-Repository-MyOAuthClientRepository.html"><abbr title="\App\Repository\MyOAuthClientRepository">MyOAuthClientRepository</abbr></a></dt>
-        <dd></dd>
+        <dd>Repository for OAuth Client Repository.</dd>
             <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/App-Repository-PostRepository.html"><abbr title="\App\Repository\PostRepository">PostRepository</abbr></a></dt>
-        <dd></dd>
+        <dd>Repository for Post Repository</dd>
             <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/App-Repository-UserRepository.html"><abbr title="\App\Repository\UserRepository">UserRepository</abbr></a></dt>
-        <dd></dd>
+        <dd>Repository for User Repository.</dd>
     
     </dl>
 
