--- a/mydocumentation/packages/App-Controller.html
+++ b/mydocumentation/packages/App-Controller.html
@@ -105,8 +105,24 @@
 
 <dl class="phpdocumentor-table-of-contents">
     
+            <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/App-Controller-AdminController.html"><abbr title="\App\Controller\AdminController">AdminController</abbr></a></dt>
+        <dd>Class AdminController - current not used.</dd>
+            <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/App-Controller-FollowingController.html"><abbr title="\App\Controller\FollowingController">FollowingController</abbr></a></dt>
+        <dd>Class FollowingController</dd>
+            <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/App-Controller-MainRouteController.html"><abbr title="\App\Controller\MainRouteController">MainRouteController</abbr></a></dt>
+        <dd>Class MainRouteController</dd>
+            <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/App-Controller-MyOAuthAccessTokenController.html"><abbr title="\App\Controller\MyOAuthAccessTokenController">MyOAuthAccessTokenController</abbr></a></dt>
+        <dd>Class MyOAuthAccessTokenController</dd>
+            <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/App-Controller-MyOAuthClientController.html"><abbr title="\App\Controller\MyOAuthClientController">MyOAuthClientController</abbr></a></dt>
+        <dd>Class MyOAuthClientController</dd>
             <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/App-Controller-PostController.html"><abbr title="\App\Controller\PostController">PostController</abbr></a></dt>
         <dd>Class PostController</dd>
+            <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/App-Controller-RegistrationController.html"><abbr title="\App\Controller\RegistrationController">RegistrationController</abbr></a></dt>
+        <dd>Class RegistrationController</dd>
+            <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/App-Controller-RestController.html"><abbr title="\App\Controller\RestController">RestController</abbr></a></dt>
+        <dd>Class RestController</dd>
+            <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/App-Controller-SecurityController.html"><abbr title="\App\Controller\SecurityController">SecurityController</abbr></a></dt>
+        <dd>Class SecurityController</dd>
     
     </dl>
 
