--- a/mydocumentation/classes/App-Controller-RestController.html
+++ b/mydocumentation/classes/App-Controller-RestController.html
@@ -105,7 +105,8 @@
             <div class="phpdocumentor-element__package">
             in package
             <ul class="phpdocumentor-breadcrumbs">
-                                    <li class="phpdocumentor-breadcrumb"><a href="packages/Application.html">Application</a></li>
+                                    <li class="phpdocumentor-breadcrumb"><a href="packages/App.html">App</a></li>
+                                    <li class="phpdocumentor-breadcrumb"><a href="packages/App-Controller.html">Controller</a></li>
                             </ul>
         </div>
     
@@ -115,12 +116,12 @@
         <aside class="phpdocumentor-element-found-in">
     <abbr class="phpdocumentor-element-found-in__file" title="src/Controller/RestController.php"><a href="files/src-controller-restcontroller.html"><abbr title="src/Controller/RestController.php">RestController.php</abbr></a></abbr>
     :
-    <span class="phpdocumentor-element-found-in__line">10</span>
+    <span class="phpdocumentor-element-found-in__line">14</span>
 
     </aside>
 
-        
-    <section class="phpdocumentor-description"></section>
+            <p class="phpdocumentor-summary">Class RestController</p>
+
 
 
 
@@ -140,7 +141,7 @@
     <span>
                         &nbsp;: <abbr title="\Symfony\Component\HttpFoundation\Response">Response</abbr>    </span>
 </dt>
-<dd>This is endpoint for listing all endpoints in my API</dd>
+<dd>This is endpoint for listing all endpoints in my API.</dd>
 
         </dl>
 
@@ -168,11 +169,11 @@
     <aside class="phpdocumentor-element-found-in">
     <abbr class="phpdocumentor-element-found-in__file" title="src/Controller/RestController.php"><a href="files/src-controller-restcontroller.html"><abbr title="src/Controller/RestController.php">RestController.php</abbr></a></abbr>
     :
-    <span class="phpdocumentor-element-found-in__line">16</span>
+    <span class="phpdocumentor-element-found-in__line">20</span>
 
     </aside>
 
-        <p class="phpdocumentor-summary">This is endpoint for listing all endpoints in my API</p>
+        <p class="phpdocumentor-summary">This is endpoint for listing all endpoints in my API.</p>
 
     <code class="phpdocumentor-code phpdocumentor-signature ">
     <span class="phpdocumentor-signature__visibility">public</span>
