--- a/mydocumentation/files/src-controller-admincontroller.html
+++ b/mydocumentation/files/src-controller-admincontroller.html
@@ -111,7 +111,7 @@
 <dl class="phpdocumentor-table-of-contents">
     
             <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/App-Controller-AdminController.html"><abbr title="\App\Controller\AdminController">AdminController</abbr></a></dt>
-        <dd></dd>
+        <dd>Class AdminController - current not used.</dd>
     
     </dl>
 
