--- a/mydocumentation/files/src-controller-mainroutecontroller.html
+++ b/mydocumentation/files/src-controller-mainroutecontroller.html
@@ -111,7 +111,7 @@
 <dl class="phpdocumentor-table-of-contents">
     
             <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/App-Controller-MainRouteController.html"><abbr title="\App\Controller\MainRouteController">MainRouteController</abbr></a></dt>
-        <dd></dd>
+        <dd>Class MainRouteController</dd>
     
     </dl>
 
