--- a/mydocumentation/files/src-controller-myoauthclientcontroller.html
+++ b/mydocumentation/files/src-controller-myoauthclientcontroller.html
@@ -111,7 +111,7 @@
 <dl class="phpdocumentor-table-of-contents">
     
             <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/App-Controller-MyOAuthClientController.html"><abbr title="\App\Controller\MyOAuthClientController">MyOAuthClientController</abbr></a></dt>
-        <dd></dd>
+        <dd>Class MyOAuthClientController</dd>
     
     </dl>
 
