--- a/mydocumentation/files/src-controller-registrationcontroller.html
+++ b/mydocumentation/files/src-controller-registrationcontroller.html
@@ -111,7 +111,7 @@
 <dl class="phpdocumentor-table-of-contents">
     
             <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/App-Controller-RegistrationController.html"><abbr title="\App\Controller\RegistrationController">RegistrationController</abbr></a></dt>
-        <dd></dd>
+        <dd>Class RegistrationController</dd>
     
     </dl>
 
