--- a/mydocumentation/files/src-entity-post.html
+++ b/mydocumentation/files/src-entity-post.html
@@ -111,7 +111,7 @@
 <dl class="phpdocumentor-table-of-contents">
     
             <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/App-Entity-Post.html"><abbr title="\App\Entity\Post">Post</abbr></a></dt>
-        <dd></dd>
+        <dd>Entity to store data about the user&#039;s posts.</dd>
     
     </dl>
 
