--- a/mydocumentation/files/src-entity-user.html
+++ b/mydocumentation/files/src-entity-user.html
@@ -111,7 +111,7 @@
 <dl class="phpdocumentor-table-of-contents">
     
             <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/App-Entity-User.html"><abbr title="\App\Entity\User">User</abbr></a></dt>
-        <dd></dd>
+        <dd>Entity to store data about the users.</dd>
     
     </dl>
 
