--- a/mydocumentation/files/src-repository-myoauthclientrepository.html
+++ b/mydocumentation/files/src-repository-myoauthclientrepository.html
@@ -111,7 +111,7 @@
 <dl class="phpdocumentor-table-of-contents">
     
             <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/App-Repository-MyOAuthClientRepository.html"><abbr title="\App\Repository\MyOAuthClientRepository">MyOAuthClientRepository</abbr></a></dt>
-        <dd></dd>
+        <dd>Repository for OAuth Client Repository.</dd>
     
     </dl>
 
