--- a/mydocumentation/files/src-repository-userrepository.html
+++ b/mydocumentation/files/src-repository-userrepository.html
@@ -111,7 +111,7 @@
 <dl class="phpdocumentor-table-of-contents">
     
             <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/App-Repository-UserRepository.html"><abbr title="\App\Repository\UserRepository">UserRepository</abbr></a></dt>
-        <dd></dd>
+        <dd>Repository for User Repository.</dd>
     
     </dl>
 
